--- a/styles/style.css
+++ b/styles/style.css
@@ -20,12 +20,15 @@
     color: #222; 
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
-    align-items: center;
-    align-self: center;
-    padding-top: 0.8rem;
+    justify-content:space-between;    
     width:100vw;
     height:60px;
+}
+
+.top-list-center {
+    display: flex;
+    align-items: center;
+
 }
 
 .more-tools-icon {
@@ -166,4 +169,35 @@ a {
 a:hover {
     color: inherit;
     text-decoration: underline;
+}
+
+
+/* mobile layout */
+@media (max-width:600px) {
+    #nav-tools ul li {
+        padding-right: 0.1rem;
+    }
+
+    .search {
+        width: 400px;
+    }
+
+    .footer-container{
+        flex-direction: column;
+        
+    }
+
+    .footer-container #footer-carbon {
+        order:1;
+    }
+
+    .footer-container #footer-business {
+        order:2;
+        justify-content: center;
+    }
+
+    .footer-container #footer-terms {
+        order:3;
+        justify-content: center;
+    }
 }
